--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  websafe_svg: ^1.1.4
+  flutter_screenutil: ^3.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
