--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   websafe_svg: ^1.1.4
   flutter_screenutil: ^3.2.0
+  flare_flutter: ^2.0.6
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -47,9 +48,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -62,6 +62,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+#  fonts:
+#    - family: IRANSans
+#      fonts:
+#        - asset: assets/fonts/IRANSans.ttf
+#          weight: 400
+#        - asset: assets/fonts/IRANSansBold.ttf
+#          weight: 700
+#        - asset: assets/fonts/IRANSansLight.ttf
+#          weight: 300
   # fonts:
   #   - family: Schyler
   #     fonts:
