--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   flutter_svg: ^0.19.1
   flutter_screenutil: ^3.2.0
   flare_flutter: ^2.0.6
-  dotted_border: ^1.0.6
+  fdottedline: ^1.0.1
 
   cupertino_icons: ^1.0.0
 
