--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   flutter_screenutil: ^3.2.0
   flare_flutter: ^2.0.6
   fdottedline: ^1.0.1
-
+  snappable: ^1.0.1
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
