--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_screenutil: ^3.2.0
   flare_flutter: ^2.0.6
   fdottedline: ^1.0.1
+  spring: ^1.0.4
 
   cupertino_icons: ^1.0.0
 
