--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   fdottedline: ^1.0.1
   spring: ^1.0.4
   snappable: ^1.0.1
+  slide_to_act: ^0.1.3+1
+  firebase_core: ^0.5.2
+  firebase_messaging: ^7.0.3
 
 
   cupertino_icons: ^1.0.0
