--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,10 +20,10 @@ dependencies:
   slide_to_act: ^0.1.3+1
   firebase_core: ^0.5.2
   firebase_messaging: ^7.0.3
-
-
   cupertino_icons: ^1.0.0
   pimp_my_button: ^1.0.0
+  assets_audio_player: ^1.7.0
+  provider: ^4.3.2+2
 
 dev_dependencies:
   flutter_test:
@@ -36,6 +36,7 @@ flutter:
     - assets/images/svg/
     - assets/images/png/
     - assets/images/
+    - assets/audios/
 
   fonts:
     - family: aseman
