Lalayi sounds added.Routing fixed.App is completed but game page need a fix because have an Exception error.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ flutter:
     - assets/images/png/
     - assets/images/
     - assets/audios/
+    - assets/audios/sounds/
+    - assets/audios/lullabies/
 
   fonts:
     - family: aseman
