So many changes. App fully completed!

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ir.niniland">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
    <application
-        android:label="niniland"
+        android:label="بچه جون"
+       android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
