--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,10 @@ dependencies:
   pimp_my_button: ^1.0.0
   assets_audio_player: ^2.0.13+1
   provider: ^4.3.2+2
+  http: ^0.12.2
+  url_launcher: ^5.7.10
+  blur: ^1.0.1
+  shared_preferences: ^0.5.12+4
 
 dev_dependencies:
   flutter_test:
