اصلاح پیام پس زمینه

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
    <application
         android:label="بچه جون"
+       android:name=".Application"
        android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher">
         <activity
