--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   http: ^0.12.2
   url_launcher: ^5.7.10
   blur: ^1.0.1
+  flutter_automation: ^1.4.0
 
 dev_dependencies:
   flutter_test:
